Using environment variables in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ api-gateway:
     - rabbitmq
   restart: always
   ports:
-    - '3000:3000'
+    - '3000:${APP_PORT}'
   volumes:
     - .:/usr/src/app
     - /usr/src/app/node_modules
